--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,22 +20,32 @@ jobs:
     - name: Install dependencies
       run: |
         apt-get update
-        apt-get install -y python3-pip python3-colcon-common-extensions
-        pip3 install pytest
+        apt-get install -y python3-pip python3-colcon-common-extensions python3-pytest
+        # Use apt instead of pip to avoid externally-managed-environment error
     
     - name: Build ROS2 workspace
       run: |
         cd ros2_ws
         source /opt/ros/jazzy/setup.bash
-        colcon build --symlink-install
+        # Skip build if no packages exist yet
+        if [ -d "src" ] && [ "$(ls -A src)" ]; then
+          colcon build --symlink-install
+        else
+          echo "No ROS2 packages found yet, skipping build"
+        fi
     
     - name: Run ROS2 tests
       run: |
         cd ros2_ws
         source /opt/ros/jazzy/setup.bash
-        source install/setup.bash
-        colcon test
-        colcon test-result --verbose
+        # Skip tests if no packages exist yet
+        if [ -d "src" ] && [ "$(ls -A src)" ]; then
+          source install/setup.bash
+          colcon test
+          colcon test-result --verbose
+        else
+          echo "No ROS2 packages found yet, skipping tests"
+        fi
 
   # Python Linting and Testing
   python-quality:
