Fix frame IDs to match T265 published frames (odom_frame and t265_pose_frame)

--- a/ros2_ws/src/james_slam/config/rtabmap_params.yaml
+++ b/ros2_ws/src/james_slam/config/rtabmap_params.yaml
@@ -1,8 +1,8 @@
 rtabmap:
   ros__parameters:
-    # Frame IDs
-    frame_id: base_link
-    odom_frame_id: odom
+    # Frame IDs (matching T265 frames)
+    frame_id: t265_pose_frame
+    odom_frame_id: odom_frame
     map_frame_id: map
     
     # Subscribe to topics
