--- a/ros2_ws/src/james_slam/config/rtabmap_params.yaml
+++ b/ros2_ws/src/james_slam/config/rtabmap_params.yaml
@@ -5,6 +5,7 @@ rtabmap:
     odom_frame_id: odom_frame
     map_frame_id: map
     publish_tf: false
+    wait_for_transform: false
     
     # Subscribe to topics
     subscribe_depth: true
