--- a/ros2_ws/src/james_slam/CMakeLists.txt
+++ b/ros2_ws/src/james_slam/CMakeLists.txt
@@ -4,11 +4,17 @@ project(james_slam)
 # Find dependencies
 find_package(ament_cmake REQUIRED)
 
-# Install launch files
+# Install launch files and config
 install(DIRECTORY
   launch
   config
   DESTINATION share/${PROJECT_NAME}
+)
+
+# Install Python scripts
+install(PROGRAMS
+  scripts/tf_bridge.py
+  DESTINATION lib/${PROJECT_NAME}
 )
 
 ament_package()
