Restructure ROS 2 workspace, scaffold missing packages, and consolidate hardware distribution docs

--- a/ros2_ws/src/james_slam/CMakeLists.txt
+++ b/ros2_ws/src/james_slam/CMakeLists.txt
@@ -14,6 +14,8 @@ install(DIRECTORY
 # Install Python scripts
 install(PROGRAMS
   scripts/tf_bridge.py
+  scripts/map_quality_monitor.py
+  scripts/test_map_quality_monitor.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
