Integrate AR4-MK3 model, add camera tower obstacle, and configure MoveIt2

--- a/ros2_ws/src/james_manipulation/config/arm_cartesian_params.yaml
+++ b/ros2_ws/src/james_manipulation/config/arm_cartesian_params.yaml
@@ -59,7 +59,7 @@ arm_cartesian_controller:
       j6_max: 2.967   # 170 degrees
     
     # MoveIt configuration
-    move_group_name: "ar4_arm"
+    move_group_name: "ar_manipulator"
     planning_frame: "base_link"
     end_effector_link: "gripper_link"
     
