Fix ROS 2 YAML parameter format for Foxy compatibility

--- a/ros2_ws/src/james_manipulation/config/moveit/controllers.yaml
+++ b/ros2_ws/src/james_manipulation/config/moveit/controllers.yaml
@@ -1,25 +1,17 @@
-/**/move_group:
+/**:
   ros__parameters:
     moveit_simple_controller_manager:
       controller_names:
         - joint_trajectory_controller
-        - gripper_controller
 
       joint_trajectory_controller:
         action_ns: follow_joint_trajectory
         type: FollowJointTrajectory
         default: true
         joints:
-          - $(var tf_prefix)joint_1
-          - $(var tf_prefix)joint_2
-          - $(var tf_prefix)joint_3
-          - $(var tf_prefix)joint_4
-          - $(var tf_prefix)joint_5
-          - $(var tf_prefix)joint_6
-
-      gripper_controller:
-        action_ns: gripper_cmd
-        type: GripperCommand
-        default: true
-        joints:
-          - $(var tf_prefix)gripper_jaw1_joint
+          - arm_joint_1
+          - arm_joint_2
+          - arm_joint_3
+          - arm_joint_4
+          - arm_joint_5
+          - arm_joint_6
