--- a/ros2_ws/src/james_manipulation/config/arm_cartesian_params.yaml
+++ b/ros2_ws/src/james_manipulation/config/arm_cartesian_params.yaml
@@ -33,9 +33,9 @@ arm_cartesian_controller:
     rotation_scale: 0.05        # rad/s per joystick unit
     
     # Control loop settings
-    control_rate: 3.0          # Hz - reduced for testing
-    command_timeout: 0.9       # seconds - increased for robustness (was 0.1)
-    movement_lead: 10.0         # tuned for ~10cm moves at 3Hz (2cm/s * 0.33s * 3.0)
+    control_rate: 50.0          # Hz - Increased for dynamic streaming
+    command_timeout: 0.1       # seconds - restored for 50Hz
+    movement_lead: 1.5         # 1.5x lead at 50Hz = ~0.5 degree segments
     ik_timeout: 0.1            # seconds - increased for Jetson Nano (KDL Solver)
     
     # Workspace safety limits (meters)
