--- a/ros2_ws/src/james_manipulation/config/arm_cartesian_params.yaml
+++ b/ros2_ws/src/james_manipulation/config/arm_cartesian_params.yaml
@@ -32,10 +32,10 @@ arm_cartesian_controller:
     velocity_scale: 0.02       # m/s per joystick unit (increased to 5cm/s)
     rotation_scale: 0.05        # rad/s per joystick unit
     
-    # Control loop settings (V18: Atomic Beef Architecture)
-    control_rate: 15.0          # Hz - Stable watchdog rate
+    # Control loop settings (V19: Stable Queueing Architecture)
+    control_rate: 20.0          # Hz - Constant heartbeat for move generation
     command_timeout: 0.5       # seconds
-    movement_lead: 1.0         # V18: Multiplier for atomic 1.5cm step
+    movement_lead: 1.0         # V19: Multiplier for atomic 1.5cm step
     ik_timeout: 0.1            # seconds - increased for Jetson Nano (KDL Solver)
     
     # Workspace safety limits (meters)
