--- a/ros2_ws/src/james_manipulation/config/moveit/kinematics.yaml
+++ b/ros2_ws/src/james_manipulation/config/moveit/kinematics.yaml
@@ -1,7 +1,9 @@
 /**:
   ros__parameters:
     ar_manipulator:
-      kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
+      kinematics_solver: bio_ik/BioIKKinematicsPlugin
       kinematics_solver_search_resolution: 0.005
-      kinematics_solver_timeout: 0.1
-      kinematics_solver_attempts: 3
+      kinematics_solver_timeout: 0.05
+      kinematics_solver_attempts: 1
+      minimal_displacement_weight: 1.0
+      rotation_scale: 0.5
