--- a/ros2_ws/src/james_manipulation/config/arm_cartesian_params.yaml
+++ b/ros2_ws/src/james_manipulation/config/arm_cartesian_params.yaml
@@ -29,7 +29,7 @@ teensy_serial_bridge:
 arm_cartesian_controller:
   ros__parameters:
     # Control scaling parameters
-    velocity_scale: 0.15       # m/s per joystick unit (approx 15% speed max)
+    velocity_scale: 0.40       # m/s per joystick unit (increased for 1cm/s target)
     rotation_scale: 0.05        # rad/s per joystick unit
     
     # Control loop settings (V19: Stable Queueing Architecture)
