--- a/ros2_ws/src/james_manipulation/config/moveit/kinematics.yaml
+++ b/ros2_ws/src/james_manipulation/config/moveit/kinematics.yaml
@@ -5,5 +5,6 @@
       kinematics_solver_search_resolution: 0.005
       kinematics_solver_timeout: 0.05
       kinematics_solver_attempts: 1
-      minimal_displacement_weight: 1.0
+      minimal_displacement_weight: 10.0
+      center_joints_weight: 0.1
       rotation_scale: 0.5
