--- a/ros2_ws/src/james_manipulation/config/moveit/kinematics.yaml
+++ b/ros2_ws/src/james_manipulation/config/moveit/kinematics.yaml
@@ -1,10 +1,13 @@
-robot_description_kinematics:
-  ar_manipulator:
-    kinematics_solver: bio_ik/BioIKKinematicsPlugin
-    kinematics_solver_search_resolution: 0.005
-    mode: gd_c
-    threads: 1
-    minimal_displacement_weight: 100.0
-    center_joints_weight: 5.0
-    avoid_joint_limits_weight: 1.0
-    rotation_scale: 0.05
+/**:
+  ros__parameters:
+    robot_description_kinematics:
+      ar_manipulator:
+        kinematics_solver: bio_ik/BioIKKinematicsPlugin
+        kinematics_solver_search_resolution: 0.005
+        mode: gd_c
+        threads: 1
+        kinematics_solver_timeout: 0.5
+        minimal_displacement_weight: 50.0
+        center_joints_weight: 1.0
+        avoid_joint_limits_weight: 1.0
+        rotation_scale: 0.1
