--- a/ros2_ws/src/james_manipulation/config/arm_cartesian_params.yaml
+++ b/ros2_ws/src/james_manipulation/config/arm_cartesian_params.yaml
@@ -64,6 +64,8 @@ arm_cartesian_controller:
     
     # MoveIt configuration
     move_group_name: "ar_manipulator"
+    translator_group_name: "ar_translator"
+    wrist_group_name: "ar_wrist"
     planning_frame: "base_link"
     end_effector_link: "arm_link_6"
     
