--- a/ros2_ws/src/james_manipulation/config/moveit/kinematics.yaml
+++ b/ros2_ws/src/james_manipulation/config/moveit/kinematics.yaml
@@ -18,6 +18,7 @@
         threads: 1
         kinematics_solver_timeout: 0.2
         position_only_ik: True
-        minimal_displacement_weight: 1.0
+        minimal_displacement_weight: 10.0
+        rotation_scale: 0.0
       ar_wrist:
         kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
