--- a/ros2_ws/src/james_manipulation/config/moveit/moveit_servo.yaml
+++ b/ros2_ws/src/james_manipulation/config/moveit/moveit_servo.yaml
@@ -40,16 +40,19 @@ is_primary_planning_scene_monitor: false
 check_octomap_collisions: false # Check collision against the octomap (if a 3D sensor plugin is available)
 
 ## MoveIt properties
-move_group_name: ar_manipulator # Often 'manipulator' or 'arm'
+move_group_name: ar_translator # Optimized for stability (Locks J4/J6)
+ee_frame_name: arm_ee_link
+robot_link_command_frame: base_link
 
 ## Configure handling of singularities and joint limits
-lower_singularity_threshold: 50.0 # Start decelerating when the condition number hits this (close to singularity)
-hard_stop_singularity_threshold: 80.0 # Stop when the condition number hits this
-leaving_singularity_threshold_multiplier: 2.0 # Multiply the hard stop limit by this when leaving singularity (see https://github.com/moveit/moveit2/pull/620)
+lower_singularity_threshold: 17.0 # Threshold for starting to dampen (Briefing recommendation)
+hard_stop_singularity_threshold: 30.0 # Threshold for stopping movement
+leaving_singularity_threshold_multiplier: 2.0
 # Added as a buffer to joint variable position bounds [in that joint variable's respective units].
 # Can be of size 1, which applies the margin to all joints, or the same size as the number of degrees of freedom of the active joint group.
 # If moving quickly, make these values larger.
-joint_limit_margins: [0.05]
+joint_limit_margins: [0.1] # radians (Briefing recommendation)
+low_pass_filter_coeff: 1.5 # (Briefing recommendation)
 
 ## Topic names
 cartesian_command_in_topic: ~/delta_twist_cmds # Topic for incoming Cartesian twist commands
