--- a/ros2_ws/src/james_manipulation/config/moveit/kinematics.yaml
+++ b/ros2_ws/src/james_manipulation/config/moveit/kinematics.yaml
@@ -16,8 +16,13 @@
         kinematics_solver_search_resolution: 0.005
         mode: gd_c
         threads: 1
-        kinematics_solver_timeout: 0.2
+        kinematics_solver_timeout: 0.1
         position_only_ik: True
-        minimal_displacement_weight: 1.0
+        minimal_displacement_weight: 10.0
       ar_wrist:
-        kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
+        kinematics_solver: bio_ik/BioIKKinematicsPlugin
+        kinematics_solver_search_resolution: 0.005
+        mode: gd_c
+        threads: 1
+        kinematics_solver_timeout: 0.1
+        minimal_displacement_weight: 1.0
