--- a/ros2_ws/src/james_manipulation/config/moveit/kinematics.yaml
+++ b/ros2_ws/src/james_manipulation/config/moveit/kinematics.yaml
@@ -13,16 +13,20 @@
         rotation_scale: 0.05
       ar_translator:
         kinematics_solver: bio_ik/BioIKKinematicsPlugin
-        kinematics_solver_search_resolution: 0.005
+        kinematics_solver_search_resolution: 0.001
         mode: gd_c
         threads: 1
-        kinematics_solver_timeout: 0.1
+        kinematics_solver_timeout: 0.2
         position_only_ik: True
         minimal_displacement_weight: 10.0
+        dpos: 0.001
+        dtwist: 0.001
       ar_wrist:
         kinematics_solver: bio_ik/BioIKKinematicsPlugin
-        kinematics_solver_search_resolution: 0.005
+        kinematics_solver_search_resolution: 0.001
         mode: gd_c
         threads: 1
-        kinematics_solver_timeout: 0.1
+        kinematics_solver_timeout: 0.2
         minimal_displacement_weight: 1.0
+        dpos: 0.001
+        dtwist: 0.001
