--- a/ros2_ws/src/james_manipulation/config/arm_cartesian_params.yaml
+++ b/ros2_ws/src/james_manipulation/config/arm_cartesian_params.yaml
@@ -28,9 +28,9 @@ teensy_serial_bridge:
 
 arm_cartesian_controller:
   ros__parameters:
-    # Control scaling parameters
     velocity_scale: 0.40       # m/s per joystick unit (increased for 1cm/s target)
     rotation_scale: 0.05        # rad/s per joystick unit
+    joystick_deadzone: 0.10     # Threshold for midpoint stability
     
     # Control loop settings (V19: Stable Queueing Architecture)
     control_rate: 20.0          # Hz - Constant heartbeat for move generation
